@@ -20,6 +20,9 @@ matrix:
     env: TOX_ENV=py36-django22
     dist: xenial
   - python: "3.6"
+    env: TOX_ENV=py36-django30
+    dist: xenial
+  - python: "3.6"
     env: TOX_ENV=py36-django20-jinja2
   - python: "2.7"
     env: TOX_ENV=py27-django18
