@@ -1,7 +1,7 @@
 [tox]
 envlist =
         {py27,py36}-django{18,19,110,111},
-        py36-django{20,21,22},
+        py36-django{20,21,22,30},
         py36-django20-jinja2,
         gettext,flake8,docs
 
@@ -21,9 +21,10 @@ deps =
         django20: Django==2.0.*
         django21: Django>=2.1a1,<=2.1.99
         django22: Django>=2.2a1,<=2.2.99
+        django30: https://github.com/django/django/archive/master.zip
 
         py27-django{18,19,110,111}: python-memcached
-        py36-django{18,19,110,111,20,21,22}: python3-memcached
+        py36-django{18,19,110,111,20,21,22,30}: python3-memcached
 extras =
         test
 
